--- a/unfold-master/index.html
+++ b/unfold-master/index.html
@@ -159,8 +159,8 @@
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
-                        <h3>개인 프로젝트</h3>
-                        <p>personal project</p>
+                        <h3>빈 칸</h3>
+                        <p>Blank</p>
                       </div>
                     </div>
                     <img src="images/work_1_md.jpg" class="lazyload  img-fluid" alt="Images" />
@@ -197,9 +197,9 @@
               </div>
 
               <div class="item illustration packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="images/work_5_md.jpg" class="portfolio-item isotope-item gsap-reveal-img" data-fancybox="gallery" data-caption="Shoe Rebranding">
+                <a href="portfolio-single-1.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="1">
                     <div class="overlay">
-                      <span class="wrap-icon icon-photo2"></span>
+                      <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
                         <h3>개인 프로젝트</h3>
                         <p>Personal Project</p>
@@ -210,7 +210,7 @@
               </div>
 
               <div class="item web branding col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="portfolio-single-2.html" class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="2">
+                <a href="portfolio-single-4.html" class="portfolio-item isotope-item gsap-reveal-img ajax-load-page" data-id="4">
                     <div class="overlay">
                       <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
@@ -223,9 +223,9 @@
               </div>
 
               <div class="item branding packaging col-sm-6 col-md-6 col-lg-4 isotope-mb-2">
-                <a href="images/work_7_a_md.jpg" class="portfolio-item item-portrait isotope-item gsap-reveal-img " data-fancybox="gallery" data-caption="Modern Building">
+                <a href="portfolio-single-5.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="5">
                     <div class="overlay">
-                      <span class="wrap-icon icon-photo2"></span>
+                      <span class="wrap-icon icon-link2"></span>
                       <div class="portfolio-item-content">
                         <h3>팀 프로젝트</h3>
                         <p>Second Team Project</p>
@@ -274,6 +274,18 @@
             </span>
           </div>
           
+          <div class="item web branding col-sm-12 col-md-6 col-lg-12 isotope-mb-2" style="padding: 0; margin: 0;">
+            <a href="portfolio-single-1.html" class="portfolio-item ajax-load-page isotope-item gsap-reveal-img" data-id="1">
+                <div class="overlay">
+                  <span class="wrap-icon icon-link2"></span>
+                  <div class="portfolio-item-content">
+                    <h3>빈 칸</h3>
+                    <p>Blank</p>
+                  </div>
+                </div>
+                <img src="images/resume.jpg" class="lazyload  img-fluid" alt="Images" />
+              </a>
+          </div>
 
           <div class="row mt-5 justify-content-between">
             <div class="col-lg-7 mb-5 mb-lg-0">
