--- a/unfold-master/index.html
+++ b/unfold-master/index.html
@@ -275,7 +275,7 @@
           </div>
           
           <div class="item web branding col-sm-12 col-md-6 col-lg-12 isotope-mb-2" style="padding: 0; margin: 0;">
-            <a href="portfolio-single-2.html" class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="2">
+            <a href="portfolio-single-6.html" class="portfolio-item ajax-load-page item-portrait isotope-item gsap-reveal-img" data-id="6">
                 <div class="overlay">
                   <span class="wrap-icon icon-link2"></span>
                   <div class="portfolio-item-content">
@@ -294,7 +294,7 @@
               </figure>
             </div>
             <div class="col-lg-4 pr-lg-5">
-              <h3 class="mb-4 heading-h3"><span class="gsap-reveal">We can make it together</span></h3>
+              <h3 class="mb-4 heading-h3"><span class="gsap-reveal">무엇이든 성실하게 끝까지</span></h3>
               <p class="lead gsap-reveal">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there <a href="#">live the blind</a> texts. </p>
               <p class="mb-4 gsap-reveal">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
               <p class="gsap-reveal"><a href="#" class="btn btn-outline-pill btn-custom-light">Download my CV</a></p>
@@ -414,7 +414,7 @@
                   <span class="number number-counter" data-number="100">0</span>
                   <span class="append-text">%</span>
                 </span>
-                <span class="counter-label">Something useful</span>
+                <span class="counter-label">Spring Boot</span>
               </div>
             </div>
           </div>
