--- a/unfold-master/portfolio-single-1.html
+++ b/unfold-master/portfolio-single-1.html
@@ -139,25 +139,25 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
-                      <span class="detail-label">Project Date</span>
-                      <span class="detail-val">March 9th, 2020</span>
+                      <span class="detail-label">기간</span>
+                      <span class="detail-val">2025/00/00</span>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
-                      <span class="detail-label">Role</span>
+                      <span class="detail-label">자신의 역활</span>
                       <span class="detail-val"><a href="#">Identity</a>, <a href="#">Web Design</a></span>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
-                      <span class="detail-label">Client</span>
+                      <span class="detail-label">팀원</span>
                       <span class="detail-val">unslate</span>
                     </div>
                   </div>
                   <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="detail-v1">
-                      <span class="detail-label">Visit</span>
+                      <span class="detail-label">프로젝트 링크</span>
                       <span class="detail-val"><a href="#">https:///</a></span>
                     </div>
                   </div>
