--- a/unfold-master/portfolio-single-ex.html
+++ b/unfold-master/portfolio-single-ex.html
@@ -118,84 +118,107 @@
       </div>
       <!-- END .cover-v1 -->
 
-      <section id="resume" class="resume section">
+      <div class="container">
+        <div class="portfolio-single-wrap unslate_co--section" id="portfolio-single-section">
+          <div class="portfolio-single-inner">
+            <h2 class="heading-portfolio-single-h2">Reshape</h2>
 
-        <!-- Section Title -->
-        <div class="container section-title" data-aos="fade-up">
-          <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-        </div><!-- End Section Title -->
-  
-        <div class="container">
-  
-          <div class="row">
-  
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <h3 class="resume-title">Sumary</h3>
-  
-              <div class="resume-item pb-0">
-                <h4>Brandon Johnson</h4>
-                <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-                <ul>
-                  <li>Portland par 127,Orlando, FL</li>
-                  <li>(123) 456-7891</li>
-                  <li>alice.barkley@example.com</li>
-                </ul>
-              </div><!-- Edn Resume Item -->
-  
-              <h3 class="resume-title">Education</h3>
-              <div class="resume-item">
-                <h4>Master of Fine Arts &amp; Graphic Design</h4>
-                <h5>2015 - 2016</h5>
-                <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-              </div><!-- Edn Resume Item -->
-  
-              <div class="resume-item">
-                <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-                <h5>2010 - 2014</h5>
-                <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-                <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
-              </div><!-- Edn Resume Item -->
-  
-            </div>
-  
-            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-              <h3 class="resume-title">Professional Experience</h3>
-              <div class="resume-item">
-                <h4>Senior graphic design specialist</h4>
-                <h5>2019 - Present</h5>
-                <p><em>Experion, New York, NY </em></p>
-                <ul>
-                  <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                  <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                  <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                  <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-                </ul>
-              </div><!-- Edn Resume Item -->
-  
-              <div class="resume-item">
-                <h4>Graphic design specialist</h4>
-                <h5>2017 - 2018</h5>
-                <p><em>Stepping Stone Advertising, New York, NY</em></p>
-                <ul>
-                  <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                  <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                  <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                  <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-                </ul>
-              </div><!-- Edn Resume Item -->
-  
-            </div>
-  
-          </div>
-  
-        </div>
-  
-      </section><!-- /Resume Section -->
-  
+            <div class="row gutter-v4 align-items-stretch mb-5">
+              <div class="col-sm-6 col-md-6 col-lg-8 blog-post-entry">
 
-                 
+                <a href="images/post_1.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal" data-caption="A nice caption will be place here">
+                  <div class="overlay">
+                    <div class="portfolio-item-content">
+                      <h3>A nice caption will be place here</h3>
+                    </div>
+                  </div>
+                  <img src="images/post_1.jpg" class="lazyload" alt="Image" />
+                </a>
+
+              </div>
+              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
+                <a href="images/post_2.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                  <div class="overlay"></div>
+                  <img src="images/post_2.jpg" class="lazyload" alt="Image" />
+                </a>
+              </div>
+
+              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
+
+                <a href="images/post_3.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                  <div class="overlay"></div>
+                  <img src="images/post_3.jpg" class="lazyload" alt="Image" />
+                </a>
+
+              </div>
+              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
+                <a href="images/post_4.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                  <div class="overlay"></div>
+                  <img src="images/post_4.jpg" class="lazyload" alt="Image" />
+                </a>
+              </div>
+
+              <div class="col-sm-6 col-md-6 col-lg-4 blog-post-entry">
+                <a href="images/post_5.jpg" class="grid-item blog-item w-100 h-100" data-fancybox="gal">
+                  <div class="overlay"></div>
+                  <img src="images/post_5.jpg" class="lazyload" alt="Image" />
+                </a>
+              </div>
+
+            </div>
+
+            <div class="row justify-content-between mb-5">
+              <div class="col-12 mb-5">
+                <div class="row">
+                  <div class="col-sm-6 col-md-6 col-lg-3">
+                    <div class="detail-v1">
+                      <span class="detail-label">Project Date</span>
+                      <span class="detail-val">March 9th, 2020</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-6 col-lg-3">
+                    <div class="detail-v1">
+                      <span class="detail-label">Role</span>
+                      <span class="detail-val"><a href="#">Identity</a>, <a href="#">Web Design</a></span>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-6 col-lg-3">
+                    <div class="detail-v1">
+                      <span class="detail-label">Client</span>
+                      <span class="detail-val">unslate</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-6 col-md-6 col-lg-3">
+                    <div class="detail-v1">
+                      <span class="detail-label">Visit</span>
+                      <span class="detail-val"><a href="#">https:///</a></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6 pr-md-5">
+                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+              </div>
+              <div class="col-md-6 pl-md-5">
+                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+              </div>
+            </div>
+
+            <div class="row justify-content-center mb-5">
+              <div class="col-md-12">
+                <div class="testimonial-v1">
+                  <div class="testimonial-inner-bg">
+                    <span class="quote">&ldquo;</span>
+                    <blockquote>
+                      Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.
+                    </blockquote>
+                  </div>
+
+                  <div class="testimonial-author-info">
+                    <img src="images/person_man_1.jpg" alt="Image">
+                    <h3>Eric Ingram</h3>
+                    <span class="d-block position">Product Designer @facebook</span>
+                  </div>
 
                 </div>
               </div>
