--- a/unfold-master/index.html
+++ b/unfold-master/index.html
@@ -317,7 +317,7 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/001-options.svg" alt="Image" width="45">
                 </div>
-                <h3>Digital <br> Strategy</h3>
+                <h3>디지털 전략</h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
               </div> 
             </div>
@@ -326,7 +326,7 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/002-chat.svg" alt="Icon" width="45">
                 </div>
-                <h3>Web <br> Design</h3>
+                <h3>웹 디자인</h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
               </div> 
             </div>
@@ -335,7 +335,7 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/003-contact-book.svg" alt="Image" class="img-fluid" width="45">
                 </div>
-                <h3>User <br> Experience</h3>
+                <h3>UX</h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
               </div> 
             </div>
@@ -345,7 +345,7 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/004-percentage.svg" alt="Image" width="45">
                 </div>
-                <h3>Web <br> Development</h3>
+                <h3>웹 개발</h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
               </div> 
             </div>
@@ -354,19 +354,11 @@
                 <div class="wrap-icon mb-3">
                   <img src="images/svg/006-goal.svg" alt="Image" width="45">
                 </div>
-                <h3>DataBase <br> Solutions</h3>
+                <h3>데이터베이스 솔루션</h3>
                 <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
               </div> 
             </div>
-            <div class="col-md-6 col-lg-4 mb-4">
-              <div class="feature-v1" data-aos="fade-up" data-aos-delay="200">
-                <div class="wrap-icon mb-3">
-                  <img src="images/svg/005-line-chart.svg" alt="Image" width="45">
-                </div>
-                <h3>Mobile <br> Applications</h3>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. </p>
-              </div> 
-            </div>
+            
 
           </div>
         </div>
